configuration nats server

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,4 @@
 PORT=3000
 
-# Product Microservice
-HOST_PRODUCT_MS=localhost
-PORT_PRODUCT_MS=3001
-
-# Orders Microservice
-HOST_ORDERS_MS=localhost
-PORT_ORDERS_MS=3002
+# Nats
+NATS_SERVERS="nats://localhost:4222"
