--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "nats": "^2.28.2",
     "reflect-metadata": "^0.2.0",
