add another url frontend

--- a/.env.template
+++ b/.env.template
@@ -3,4 +3,4 @@ PORT=3000
 # Nats
 NATS_SERVERS="nats://localhost:4222"
 
-URL_FRONTENDS="http://localhost:4200"
+URL_FRONTENDS="http://localhost:4200;http://localhost:4201"
